# android-search-box-app

./: .gitignore  README.md  build.gradle  local.properties  privacy-policy.md  settings.gradle
app/: .gitignore  app-release.apk  build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/toybox/: toybox32  toybox64  toybox86_64
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/toybox_headers/: toys.h
app/src/main/cpp/toybox_headers/lib/: lib.h  portability.h
app/src/main/res/anim/: alpha_hide.xml  alpha_show.xml  fragment_enter.xml  fragment_enter_scale.xml  fragment_exit_scale.xml  fragment_nothing.xml  rotate.xml  translate_up_hide.xml  translate_up_show.xml
app/src/main/res/color/: bg_edit_text_outlined.xml  bg_search_field.xml  ic_search_status.xml  item_drop_down.xml  item_progress_action_tint.xml  preference_text_field_stroke.xml  surface_variant_lite.xml
app/src/main/res/drawable/: an.xml  bg_bottom_sheet.xml  bg_colored_ripple.xml  bg_rounded.xml  bg_search_field.xml  bg_stroked_ripple.xml  bg_transparent_ripple.xml  bottom_sheet_bone.xml  bottom_sheet_corners.xml  clip_card_thumbnail.xml  counter_bg.xml  hash.xml  hash_dis.xml  ic_back.xml  ic_bookmark.xml  ic_check_box.xml  ic_circle.xml  ic_circle_cross.xml  ic_circle_pressed.xml  ic_circle_states.xml  ic_circle_stop.xml  ic_close.xml  ic_copy.xml  ic_cross.xml  ic_dark.xml  ic_dock_end.xml  ic_dock_start.xml  ic_edit.xml  (+130 more)
app/src/main/res/drawable-v23/: bg_bottom_sheet.xml
gradle/wrapper/: gradle-wrapper.properties
(+986 files in other folders)
